--- a/client/mvp/src/App.css
+++ b/client/mvp/src/App.css
@@ -6,26 +6,9 @@
   align-items: center;
 }
 
+ 
 
-.auth-form-container  {
-
-  flex-direction: column;
-  background-color: aqua;;
-  height: 444px;
-  width: 450px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;  
-  position: relative;
-  
-};
-
- .one {
-  display: block;
-  align-items: center;
-  
-}
+ 
 .giver{
   color: goldenrod;
   font-size: medium;
@@ -41,86 +24,32 @@
   font-weight: 600;
 }
 
-input{
-  display: block;
-  padding: 5px; 
-}
+
 
 .join{
   position:absolute;
   margin: 200px;
 } 
 
-.but{
-  color: brown;
-  font-size: 3vh;
-  border: none;
-}
-.logo{
-  position: relative;
-  display: flex;
-}
 
-.two {
-  justify-content: center;
-  align-items: center;
-  
-}
+
+
+
+
+
 .join-form{
   
 display: flex;
 flex-direction: column;  
   
 }
-.password-input-container {
-  position: relative;
-}
 
-.password-toggle-icon {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-}
 .reg{
   color: white;
   font-style: italic;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 58px;
-  background-color:white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-}
 
-.nav ul {
-  display: flex;
-  list-style-type: none;
-  justify-content: space-between;
-  align-items: center;
-  padding: 150px;
-  position: relative;
-  left: 40px;
-}
-
-.nav a {
-  display: block;
-  padding: 3rem;
-  color:black;
-  text-decoration: none;
-}
 .radio-container {
   display: flex;
   align-items: center;
@@ -129,67 +58,19 @@ flex-direction: column;
 .radio-container label {
   margin-right: 10px;
 }
-.mini{
-  height: 0px;
-  width: 0px;
-  position: relative;
-  left: -180px;
-  bottom: 28px;
-  /*filter: hue-rotate(90deg);
-  */filter: sepia(100%) saturate(1000%) brightness(90%);
-}
-.nav a {
-  color: black;
-}
 
-.nav a:visited {
-  color: gold;
-}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
 
-.nav a:hover:not(:visited) {
-  color: black;
 }
-
-.dropdown-container {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-select {
-  width: 200px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
-  color: #333;
-  font-size: 16px;
-  cursor: pointer;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-}
-
-.dropdown-menu {
+.contact, .services,.does,.meal,.postpartum,.newborn,.mother,.breastfeeding,.about{
   position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  padding: 10px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 999;
-}
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 3rem;
 
-.dropdown-option {
-  padding: 8px;
-  cursor: pointer;
-}
-
-.dropdown-option:hover {
-  background-color: #f0f0f0;
-}
-
-.dropdown-option.active {
-  background-color: #f0f0f0;
 }
