--- a/client/mvp/src/pages/navbar.css
+++ b/client/mvp/src/pages/navbar.css
@@ -1,5 +1,8 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%) !important;
+    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%) !important; */
+    background-color: rgba(63, 63, 63, 0.9);
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+    opacity: 0.9px;
     height: 80px;
     width: 100% ;
     display: flex ;
