--- a/client/mvp/src/pages/home.css
+++ b/client/mvp/src/pages/home.css
@@ -99,7 +99,7 @@
 .hometext02 {
   font-size: 18px;
   text-align: center;
-  color: #d5f856;
+  color: #fff;
   margin: 10px;
   opacity: 0.8;
   position: relative;
