--- a/client/mvp/src/pages/login.css
+++ b/client/mvp/src/pages/login.css
@@ -70,7 +70,10 @@ input{
     right: 50px;
     transform: translateY(-50%);
     cursor: pointer;
-    
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
   .login{
     position: relative;
@@ -79,8 +82,11 @@ input{
     background-color: orangered;
     border-radius: 0px 4px 0px 4px;
     cursor: pointer;
-   
-  }
+    -webkit-border-radius: 0px 4px 0px 4px;
+    -moz-border-radius: 0px 4px 0px 4px;
+    -ms-border-radius: 0px 4px 0px 4px;
+    -o-border-radius: 0px 4px 0px 4px;
+}
   .login:hover{
     background-color:  rgb(211, 91, 11);
  color: #fff;
