--- a/client/mvp/src/pages/logout.css
+++ b/client/mvp/src/pages/logout.css
@@ -1,4 +1,4 @@
-.logout-container {
+/* .logout-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,4 +20,4 @@
     cursor: pointer;
     font-size: 16px;
   }
-  
+   */
