--- a/client/mvp/src/pages/navbar.css
+++ b/client/mvp/src/pages/navbar.css
@@ -1,5 +1,5 @@
-.navbar {
-    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%) !important; */
+ .navbar {
+    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%) !important;  */
     background-color: rgba(63, 63, 63, 0.9);
     box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
     opacity: 0.9px;
@@ -56,10 +56,10 @@
     background-color: #1888ff;
     border-radius: 4px;
     transition: all 0.2s ease-out;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    -ms-border-radius:4px;
-    -o-border-radius:4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     -ms-transition: all 0.2s ease-out;
@@ -108,10 +108,6 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -ms-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
 }
   
     .nav-links {
@@ -123,11 +119,7 @@
   
     .nav-links:hover {
       background-color: #1888ff;
-      border-radius: 0;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-      -ms-border-radius: 0;
-      -o-border-radius: 0;
+     
 }
   
     .navbar-logo {
@@ -171,39 +163,51 @@
       text-decoration: none;
       color: #fff;
       font-size: 1.5rem;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      -ms-border-radius: 4px;
-      -o-border-radius: 4px;
+      
 }
   
     .nav-links-mobile:hover {
       background: #fff;
       color: #1888ff;
       transition: 250ms;
-      -webkit-transition: 250ms;
-      -moz-transition: 250ms;
-      -ms-transition: 250ms;
-      -o-transition: 250ms;
+     
 }
   
   
   }
 
-  .logout-button {
-    padding: 8px 16px;
-    background-color: #f44336;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 4px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    transition: background-color 0.3s;
-    position: relative;
-  }
   
-  .logout-button:hover {
-    background-color: #d32f2f;
-  }
-  
+
+/* Other styles for the navbar */
+
+.logout-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.logout-heading {
+  font-size: 1.2rem;
+  margin-right: 10px;
+}
+
+.logout-button {
+  padding: 8px 16px;
+  background-color: #ff0000;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+
+.logout-button:hover {
+  background-color: #e60000;
+}  
+
+
